fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 .sidebar {
   box-shadow: rgb(113 122 131 / 11%) 0px 7px 30px 0px;
+  z-index: 10000;
 }
 .nav-item,
 .navbar {
@@ -9,7 +10,7 @@
 }
 @media  screen and (max-width:800px) {
   .sidebar{
-    z-index: 10000000;
+    z-index: 10000000 !important;
   }
 }
 
